MetaClipboardManager: mimetypes list leaked in owner_changed_cb()
==108685== 340 (24 direct, 316 indirect) bytes in 1 blocks are definitely lost in loss record 21,820 of 24,823
==108685== at 0x483980B: malloc (vg_replace_malloc.c:309)
==108685== by 0x4D1CC40: g_malloc (gmem.c:102)
==108685== by 0x4D34D84: g_slice_alloc (gslice.c:1024)
==108685== by 0x4D12E4E: g_list_copy_deep (glist.c:749)
==108685== by 0x58ACFF6: owner_changed_cb (meta-clipboard-manager.c:106)
==108685== by 0x66C8AA7: ffi_call_unix64 (in /usr/lib64/libffi.so.6.0.2)
==108685== by 0x66C82A3: ffi_call (in /usr/lib64/libffi.so.6.0.2)
==108685== by 0x4C7E782: g_cclosure_marshal_generic (gclosure.c:1500)
==108685== by 0x4C7DF51: g_closure_invoke (gclosure.c:810)
==108685== by 0x4C914A4: signal_emit_unlocked_R (gsignal.c:3737)
==108685== by 0x4C9A8A4: g_signal_emit_valist (gsignal.c:3423)
==108685== by 0x4C9B1EC: g_signal_emit (gsignal.c:3479)
meta_selection_get_mimetypes()
is called in owner_changed_cb()
in meta-clipboard-manager.c
and returns a deep copy of the mimetypes list which is never freed.